// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bright Mirror page should hide fiction creation section if timeline is over 1`] = `
<div
  className="instruction-view"
>
  <InstructionsText
    body="Participez à la création de fiction"
    title="Instruction"
  />
  <div
    className="overflow-x"
  >
    <FictionsList
      identifier="brightMirror"
      lang={undefined}
      posts={Array []}
      refetchIdea={[Function]}
      themeId={0}
    />
  </div>
</div>
`;

exports[`Bright Mirror page should hide fiction creation section if user is not allowed post 1`] = `
<div
  className="instruction-view"
>
  <InstructionsText
    body="Participez à la création de fiction"
    title="Instruction"
  />
  <div
    className="overflow-x"
  >
    <FictionsList
      identifier="brightMirror"
      lang={undefined}
      posts={Array []}
      refetchIdea={[Function]}
      themeId={0}
    />
  </div>
</div>
`;

exports[`Bright Mirror page should hide fiction creation section if user is not connected 1`] = `
<div
  className="instruction-view"
>
  <InstructionsText
    body="Participez à la création de fiction"
    title="Instruction"
  />
  <div
    className="overflow-x"
  >
    <FictionsList
      identifier="brightMirror"
      lang={undefined}
      posts={Array []}
      refetchIdea={[Function]}
      themeId={0}
    />
  </div>
</div>
`;

exports[`Bright Mirror page should match BrightMirror instruction snapshot 1`] = `
<div
  className="instruction-view"
>
  <InstructionsText
    body="Participez à la création de fiction"
    title="Instruction"
  />
  <div
    className="overflow-x"
  >
    <TopPostFormContainer
      bodyPlaceholder="debate.brightMirror.fillBodyLabel"
      fillBodyLabel="debate.brightMirror.fillBodyLabel"
      ideaId={0}
      instructionLabel="debate.brightMirror.startFictionLabel"
      postSuccessMsg="debate.brightMirror.postSuccessMsg"
      refetchIdea={[Function]}
      topPostsCount={0}
    />
    <FictionsList
      identifier="brightMirror"
      lang={undefined}
      posts={Array []}
      refetchIdea={[Function]}
      themeId={0}
    />
  </div>
</div>
`;
